Don't run gnome-session in failsafe mode

Explicitly pass /usr/share/gdm/greeter/autostart
as autostart dir, and don't run gnome-session in failsafe
mode, so it can autostart applications from that directory.

https://bugzilla.gnome.org/show_bug.cgi?id=684474